--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,9 @@
 project:
   type: website
   output-dir: docs
+  render:
+    - "*.qmd"
+    - "files/"
 
 website:
   title: "EPsy 8264"
@@ -38,4 +41,4 @@ format:
     sidebar: false
 
 
-
+  
